add_subdirectory(analysis)
add_subdirectory(cmdline_tools)
add_subdirectory(collection)
add_subdirectory(cula)
add_subdirectory(dist_tools)
add_subdirectory(gsl)
add_subdirectory(hdf)
add_subdirectory(hdf5)
add_subdirectory(indices)
add_subdirectory(install_tools)
add_subdirectory(introspection)
add_subdirectory(itools)
add_subdirectory(markdown)
add_subdirectory(misc)
add_subdirectory(net)
add_subdirectory(netcdf)
add_subdirectory(objects)
add_subdirectory(profiling)
add_subdirectory(save)
add_subdirectory(strings)
add_subdirectory(templating)
add_subdirectory(textmarkup)
add_subdirectory(updater)
add_subdirectory(vis)
add_subdirectory(widgets)
