add_subdirectory(analysis)
add_subdirectory(autodiff)
add_subdirectory(calendar)
add_subdirectory(cmdline_tools)
add_subdirectory(collection)
add_subdirectory(cula)
add_subdirectory(dist_tools)
add_subdirectory(docgen)
add_subdirectory(envi)
add_subdirectory(fileio)
add_subdirectory(fits)
add_subdirectory(geometry)
add_subdirectory(googlevoice)
add_subdirectory(gsl)
add_subdirectory(grib)
add_subdirectory(hdf)
add_subdirectory(hdf5)
add_subdirectory(indices)
add_subdirectory(install_tools)
add_subdirectory(introspection)
add_subdirectory(itools)
add_subdirectory(learn)
add_subdirectory(markdown)
add_subdirectory(matrices)
add_subdirectory(misc)
add_subdirectory(multiprocessing)
add_subdirectory(mysql)
add_subdirectory(net)
add_subdirectory(netcdf)
add_subdirectory(objects)
add_subdirectory(opencl)
add_subdirectory(plasma)
add_subdirectory(profiling)
add_subdirectory(pubsub)
add_subdirectory(save)
add_subdirectory(stats)
add_subdirectory(strings)
add_subdirectory(tables)
add_subdirectory(templating)
add_subdirectory(textmarkup)
add_subdirectory(updater)
add_subdirectory(vis)
add_subdirectory(widgets)
add_subdirectory(zeromq)
add_subdirectory(zlib)

file(GLOB PRO_FILES "*.pro")
install(FILES ${PRO_FILES} DESTINATION lib)
