get_filename_component(DIRNAME "${CMAKE_CURRENT_SOURCE_DIR}" NAME)

add_subdirectory(animation)
add_subdirectory(color)
add_subdirectory(flow)
add_subdirectory(geometry)
add_subdirectory(googlechart)
add_subdirectory(graphs)
add_subdirectory(images)
add_subdirectory(lineplots)
add_subdirectory(misc)
add_subdirectory(objectgraphics)
add_subdirectory(povray)
add_subdirectory(surfaces)
add_subdirectory(tables)
add_subdirectory(text)
add_subdirectory(treemaps)
add_subdirectory(util)
add_subdirectory(vtk)
add_subdirectory(x3d)

install(FILES .idldoc DESTINATION lib/${DIRNAME})

